# dBGAlignLib

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
examples/: example.ipynb
src/dBgAlign/: __init__.py  deBrujinGraph.py  de_brujin_graph.py  partial_order_graph.py  utils.py
src/dbg_align/: __init__.py  alignment.py  alignment_cost_plugin.py  alignment_operation.py  allignment_buffer.py  composite_alignment.py  constants.py  dag_bubble.py  dag_node.py  dbg_edge.py  dbg_node.py  dbg_traversal.py  de_brujin_graph.py  debruijngraph.py  debrujingraph.py  directedacyclicgraph.py  mock_alignment.py  partialordergraph.py  pog_bubble.py  pog_node.py  utils.py
tests/: conftest.py  test_alignment.py  test_analysis.py  test_dBgAlign.py  test_dag.py  test_debrujingraph.py  test_pog.py
tests/data/BRCA1/all/: brca1.fasta
tests/data/BRCA1/divergent/: brca1.fasta
tests/data/BRCA1/primates/: brca1.fasta
tests/output/: cycle.md  cycle_compressed.md  nested_bubble.md  nested_bubble_compressed.md  test_compress.md  uml.md
working/: cycles.md  test_alignment.ipynb
