[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
requires-python = ">=3.7"
module = "dbg_align"
author = "Richard Morris"
author-email = "richard@khiron.com"
home-page = "https://github.com/khiron/dBgAlign"
classifiers = ["License :: OSI Approved :: BSD License"]
requires = ["graphviz", "numpy", "cogent3", "IPython", "pytest"]

[tool.flit.scripts]
# Define your command-line scripts here

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
| foo.py           # also separately exclude a file named foo.py in
                   # the root of the project
)
'''

[tool.isort]
profile = "black"